Fix usage of APIs not existing in LabyMod 3